# lerobot-esp32

./: .gitignore  README.md  README_zh.md  build_package.py  pyproject.toml  requirements.txt
box2driver/: __init__.py  bridge.py  cli.py  client.py  com_tcp_bridge.py  datastore.py  gateway.py  serial_io.py  start_com_bridge.py  sts_server.py  vcom_bridge.py  ws_server.py
box2driver_obf/: cli.py  client.py  com_tcp_bridge.py  datastore.py  gateway.py  serial_io.py  start_com_bridge.py  sts_server.py  vcom_bridge.py  ws_server.py
dist_pkg/: README.md  box2driver-0.4.4-py3-none-any.whl  box2driver-0.4.5-py3-none-any.whl
dist_pkg/box2driver/: cli.py  client.py  com_tcp_bridge.py  datastore.py  gateway.py  serial_io.py  start_com_bridge.py  sts_server.py  vcom_bridge.py  ws_server.py
dist_pkg/box2driver/pyarmor_runtime_000000/: __init__.py
dist_pkg/box2driver/static/: dashboard.html
examples/: keyboard_ik_control.py  record_replay.py  so100_kinematics.py
examples/docs/: virtual_com_setup.md
scripts/: check_env.py  check_firmware.py  compare_servo_protocol.py  create_com0com_pair.bat  example_collect.py  gateway_recv.py  set_motors_half_encode.py  start_servo_bridge.bat  start_servo_bridge.sh  test_sts_tcp.py
